# photopro-ai-2

./: DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  README.md  nixpacks.toml  railway.toml  render.yaml  requirements.txt  start.sh  test_deployment.py  test_vercel_setup.py  vercel.json
api/: index.py  requirements.txt
backend/: .dockerignore  .env.production  Dockerfile  Procfile  REPLICATE_SETUP.md  __init__.py  admin.py  app.py  app_simple.py  app_vercel.py  auth.py  batch_processing.py  check_python.py  config.py  database.py  docs.py  env.example  env.production.template  gunicorn.conf.py  main.py  middleware.py  models.py  monitoring.py  nixpacks.toml  package.json  pyproject.toml  railway.json  railway.toml  requirements.txt  schemas.py  server.py  setup.py  start.sh  storage.py  test_cloudinary.py  test_external_services.py  test_replicate.py  utils.py  websocket.py
backend/scripts/: run_setup.sh  setup_production.py
backend/tests/: test_main.py
frontend/: env.production  next.config.js  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.css
frontend/src/components/: AdminDashboard.js  BulkPhotoUpload.js  CreditDisplay.js  LoadingSpinner.js  PhotoGallery.js  PhotoUpload.js  ProcessingStatus.js  UserProfile.js
frontend/src/contexts/: AuthContext.js
frontend/src/hooks/: useWebSocket.js
frontend/src/pages/: Dashboard.js  Login.js  Signup.js
frontend/src/services/: api.js
