[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photopro-ai"
version = "1.0.0"
description = "AI-powered professional photo generation platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "gunicorn==21.2.0",
]

[project.scripts]
start = "uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000}"
